crates/builder/src/typechecker/snapshots/builder__typechecker__tests__with_auth_context_use_in_field_annotation.snap
---
source: crates/builder/src/typechecker/mod.rs
expression: build(src).unwrap()
---
types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: Uuid
    - - ~
      - Primitive: Exograph
    - - ~
      - Primitive: ExographPriv
    - - ~
      - Primitive:
          Interception: Operation
    - - ~
      - Composite:
          name: AuthContext
          kind: Context
          fields:
            - name: role
              typ:
                Plain:
                  - String
                  - []
                  - true
              annotations:
                annotations:
                  jwt:
                    name: jwt
                    params: None
              default_value: ~
          annotations:
            annotations: {}
    - - ~
      - Composite:
          name: Doc
          kind: Type
          fields:
            - name: is_public
              typ:
                Plain:
                  - Boolean
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
            - name: content
              typ:
                Plain:
                  - String
                  - []
                  - true
              annotations:
                annotations:
                  access:
                    name: access
                    params:
                      Single:
                        - LogicalOp:
                            Or:
                              - RelationalOp:
                                  Eq:
                                    - FieldSelection:
                                        Select:
                                          - Single:
                                              - Identifier:
                                                  - AuthContext
                                                  - Defer
                                              - Reference:
                                                  index: 15
                                                  generation: ~
                                          - Identifier:
                                              - role
                                              - Defer
                                          - Reference:
                                              index: 4
                                              generation: ~
                                    - StringLiteral:
                                        - ROLE_ADMIN
                                    - Primitive: Boolean
                              - FieldSelection:
                                  Select:
                                    - Single:
                                        - Identifier:
                                            - self
                                            - Defer
                                        - Reference:
                                            index: 16
                                            generation: ~
                                    - Identifier:
                                        - is_public
                                        - Defer
                                    - Reference:
                                        index: 0
                                        generation: ~
                              - Primitive: Boolean
              default_value: ~
          annotations:
            annotations: {}
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
  map:
    AuthContext:
      index: 15
      generation: ~
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Doc:
      index: 16
      generation: ~
    Exograph:
      index: 12
      generation: ~
    ExographPriv:
      index: 13
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 14
      generation: ~
    String:
      index: 4
      generation: ~
    Uuid:
      index: 11
      generation: ~
modules:
  values:
    - - ~
      - name: DocumentModule
        annotations:
          annotations:
            postgres:
              name: postgres
              params: None
        types:
          - name: Doc
            kind: Type
            fields:
              - name: is_public
                typ:
                  Plain:
                    - Boolean
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
              - name: content
                typ:
                  Plain:
                    - String
                    - []
                    - true
                annotations:
                  annotations:
                    access:
                      name: access
                      params:
                        Single:
                          - LogicalOp:
                              Or:
                                - RelationalOp:
                                    Eq:
                                      - FieldSelection:
                                          Select:
                                            - Single:
                                                - Identifier:
                                                    - AuthContext
                                                    - Defer
                                                - Reference:
                                                    index: 15
                                                    generation: ~
                                            - Identifier:
                                                - role
                                                - Defer
                                            - Reference:
                                                index: 4
                                                generation: ~
                                      - StringLiteral:
                                          - ROLE_ADMIN
                                      - Primitive: Boolean
                                - FieldSelection:
                                    Select:
                                      - Single:
                                          - Identifier:
                                              - self
                                              - Defer
                                          - Reference:
                                              index: 16
                                              generation: ~
                                      - Identifier:
                                          - is_public
                                          - Defer
                                      - Reference:
                                          index: 0
                                          generation: ~
                                - Primitive: Boolean
                default_value: ~
            annotations:
              annotations: {}
        methods: []
        interceptors: []
        base_exofile: input.exo
    - ~
    - ~
    - ~
  map:
    DocumentModule:
      index: 0
      generation: ~

