crates/builder/src/typechecker/snapshots/builder__typechecker__tests__with_auth_context_use_in_type_annotation.snap
---
source: crates/builder/src/typechecker/mod.rs
assertion_line: 530
expression: build(src).unwrap()
---
types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: Uuid
    - - ~
      - Primitive: Exograph
    - - ~
      - Primitive: ExographPriv
    - - ~
      - Primitive:
          Interception: Operation
    - - ~
      - Composite:
          name: AuthContext
          kind: Context
          fields:
            - name: role
              typ:
                Plain:
                  - String
                  - []
                  - true
              annotations:
                annotations:
                  jwt:
                    name: jwt
                    params: None
              default_value: ~
          annotations:
            annotations: {}
    - - ~
      - Composite:
          name: Doc
          kind: Type
          fields:
            - name: is_public
              typ:
                Plain:
                  - Boolean
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
            - name: content
              typ:
                Plain:
                  - String
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
          annotations:
            annotations:
              access:
                name: access
                params:
                  Single:
                    - LogicalOp:
                        Or:
                          - RelationalOp:
                              Eq:
                                - FieldSelection:
                                    Select:
                                      - Single:
                                          - - AuthContext
                                          - Reference:
                                              index: 15
                                              generation: ~
                                      - - role
                                      - Reference:
                                          index: 4
                                          generation: ~
                                - StringLiteral:
                                    - ROLE_ADMIN
                                - Primitive: Boolean
                          - FieldSelection:
                              Select:
                                - Single:
                                    - - self
                                    - Reference:
                                        index: 16
                                        generation: ~
                                - - is_public
                                - Reference:
                                    index: 0
                                    generation: ~
                          - Primitive: Boolean
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
  map:
    AuthContext:
      index: 15
      generation: ~
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Doc:
      index: 16
      generation: ~
    Exograph:
      index: 12
      generation: ~
    ExographPriv:
      index: 13
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 14
      generation: ~
    String:
      index: 4
      generation: ~
    Uuid:
      index: 11
      generation: ~
services:
  values:
    - - ~
      - name: DocumentService
        annotations:
          annotations:
            postgres:
              name: postgres
              params: None
        types:
          - name: Doc
            kind: Type
            fields:
              - name: is_public
                typ:
                  Plain:
                    - Boolean
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
              - name: content
                typ:
                  Plain:
                    - String
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
            annotations:
              annotations:
                access:
                  name: access
                  params:
                    Single:
                      - LogicalOp:
                          Or:
                            - RelationalOp:
                                Eq:
                                  - FieldSelection:
                                      Select:
                                        - Single:
                                            - - AuthContext
                                            - Reference:
                                                index: 15
                                                generation: ~
                                        - - role
                                        - Reference:
                                            index: 4
                                            generation: ~
                                  - StringLiteral:
                                      - ROLE_ADMIN
                                  - Primitive: Boolean
                            - FieldSelection:
                                Select:
                                  - Single:
                                      - - self
                                      - Reference:
                                          index: 16
                                          generation: ~
                                  - - is_public
                                  - Reference:
                                      index: 0
                                      generation: ~
                            - Primitive: Boolean
        methods: []
        interceptors: []
        base_exofile: input.exo
    - ~
    - ~
    - ~
  map:
    DocumentService:
      index: 0
      generation: ~

